WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268753
Webrtc decoder MediaCapabilities powerEfficient value is incorrect
https://bugs.webkit.org/show_bug.cgi?id=268753
Summary
Webrtc decoder MediaCapabilities powerEfficient value is incorrect
youenn fablet
Reported
2024-02-05 09:14:48 PST
Webrtc decoder MediaCapabilities powerEfficient value is incorrect since we disabled VTB APIs in WebProcess.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-05 09:15:40 PST
<
rdar://problem/122316664
>
youenn fablet
Comment 2
2024-02-05 09:34:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23868
EWS
Comment 3
2024-02-09 04:23:04 PST
Committed
274358@main
(b19ff0f84cdb): <
https://commits.webkit.org/274358@main
> Reviewed commits have been landed. Closing PR #23868 and removing active labels.
Diego Pino
Comment 4
2024-02-10 09:32:26 PST
This change broke the build for WPE/WebKitGTK with LibWebRTC:
https://build.webkit.org/#/builders/2/builds/8652
FAILED: In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-18.cpp:6: ../../../Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp: In member function ‘virtual bool WebKit::LibWebRTCProvider::isSupportingVP9HardwareDecoder() const’: ../../../Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp:86:36: error: ‘class WebKit::WebProcess’ has no member named ‘libWebRTCCodecs’ 86 | return WebProcess::singleton().libWebRTCCodecs().isSupportingVP9HardwareDecoder(); | ^~~~~~~~~~~~~~~ ../../../Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp: In member function ‘virtual void WebKit::LibWebRTCProvider::setVP9HardwareSupportForTesting(std::optional<bool>)’: ../../../Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp:91:29: error: ‘class WebKit::WebProcess’ has no member named ‘libWebRTCCodecs’ 91 | WebProcess::singleton().libWebRTCCodecs().setVP9HardwareSupportForTesting(value); | ^~~~~~~~~~~~~~~
Diego Pino
Comment 5
2024-02-10 09:35:42 PST
Re-opening for pull request
https://github.com/webkit/webkit/pull/24206
EWS
Comment 6
2024-02-10 11:20:41 PST
Committed
274423@main
(e790e23b5624): <
https://commits.webkit.org/274423@main
> Reviewed commits have been landed. Closing PR #24206 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug