Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.h
@@ -48,7 +48,7 @@ WEBCORE_EXPORT bool vp9HardwareDecoderAvailable();
 bool isVP8DecoderAvailable();
 bool isVPCodecConfigurationRecordSupported(const VPCodecConfigurationRecord&);
 std::optional<MediaCapabilitiesInfo> validateVPParameters(const VPCodecConfigurationRecord&, const VideoConfiguration&);
-std::optional<MediaCapabilitiesInfo> computeVPParameters(const VideoConfiguration&);
+std::optional<MediaCapabilitiesInfo> computeVPParameters(const VideoConfiguration&, bool vp9HardwareDecoderAvailable);
 bool isVPSoftwareDecoderSmooth(const VideoConfiguration&);
 
 Ref<VideoInfo> createVideoInfoFromVP9HeaderParser(const vp9_parser::Vp9HeaderParser&, const webm::Element<webm::Colour>&);
