Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp
@@ -245,19 +245,6 @@ void LibWebRTCProvider::setLoggingLevel(WTFLogLevel level)
     setRTCLogging(level);
 }
 
-void LibWebRTCProvider::setVP9VTBSupport(bool value)
-{
-    m_supportsVP9VTB = value;
-
-    m_videoDecodingCapabilities = { };
-    m_videoEncodingCapabilities = { };
-}
-
-bool LibWebRTCProvider::isSupportingVP9VTB() const
-{
-    return m_supportsVP9VTB;
-}
-
 bool LibWebRTCProvider::isEnumeratingAllNetworkInterfacesEnabled() const
 {
     return m_enableEnumeratingAllNetworkInterfaces;
@@ -309,6 +296,9 @@ void LibWebRTCProvider::clearFactory()
 {
     m_audioModule = nullptr;
     m_factory = nullptr;
+
+    m_videoDecodingCapabilities = { };
+    m_videoEncodingCapabilities = { };
 }
 
 rtc::scoped_refptr<webrtc::PeerConnectionFactoryInterface> LibWebRTCProvider::createPeerConnectionFactory(rtc::Thread* networkThread, rtc::Thread* signalingThread)
@@ -552,11 +542,11 @@ std::optional<MediaCapabilitiesDecodingInfo> LibWebRTCProvider::videoDecodingCap
         info.smooth = isVPSoftwareDecoderSmooth(configuration);
     } else if (equalLettersIgnoringASCIICase(containerType, "video/vp9"_s)) {
         auto decodingInfo = computeVPParameters(configuration);
-        if (decodingInfo && !decodingInfo->supported && isSupportingVP9VTB()) {
+        if (decodingInfo && !decodingInfo->supported && isSupportingVP9HardwareDecoder()) {
             info.supported = false;
             return { info };
         }
-        info.powerEfficient = decodingInfo ? decodingInfo->powerEfficient : true;
+        info.powerEfficient = decodingInfo ? decodingInfo->powerEfficient : isSupportingVP9HardwareDecoder();
         info.smooth = decodingInfo ? decodingInfo->smooth : isVPSoftwareDecoderSmooth(configuration);
     } else if (equalLettersIgnoringASCIICase(containerType, "video/h264"_s)) {
         // FIXME: Provide more granular H.264 decoder information.
