Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.h
@@ -70,6 +70,8 @@ private:
 
     rtc::scoped_refptr<webrtc::PeerConnectionInterface> createPeerConnection(WebCore::ScriptExecutionContextIdentifier, webrtc::PeerConnectionObserver&, rtc::PacketSocketFactory*, webrtc::PeerConnectionInterface::RTCConfiguration&&) final;
 
+    bool isSupportingVP9HardwareDecoder() const final;
+    void setVP9HardwareSupportForTesting(std::optional<bool>) final;
     void disableNonLocalhostConnections() final;
     void startedNetworkThread() final;
     RefPtr<WebCore::RTCDataChannelRemoteHandlerConnection> createRTCDataChannelRemoteHandlerConnection() final;
